remove redis from snap

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -171,7 +171,7 @@ snapctl stop "$SNAP_NAME.postgres"
 # finally, disable and turn off non-default services
 # by default, we want the export-*, support-*, device-*, and redis services 
 # off.
-for svc in export-distro export-client support-notifications support-scheduler support-logging support-rulesengine device-random device-virtual redis; do
+for svc in export-distro export-client support-notifications support-scheduler support-logging support-rulesengine device-random device-virtual; do
     # set the service as off, so that the setting is persistent after a refresh
     # due to snapd bug: https://bugs.launchpad.net/snapd/+bug/1818306
     snapctl set $svc=off
